@@ -19,6 +19,7 @@ package org.apache.maven.plugin.compiler;
  * under the License.
  */
 
+import org.apache.maven.artifact.DependencyResolutionRequiredException;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
@@ -28,7 +29,10 @@ import org.codehaus.plexus.compiler.util.scan.SimpleSourceInclusionScanner;
 import org.codehaus.plexus.compiler.util.scan.SourceInclusionScanner;
 import org.codehaus.plexus.compiler.util.scan.StaleSourceScanner;
 
+
 import java.io.File;
+import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -59,12 +63,6 @@ public class TestCompilerMojo
      */
     @Parameter ( defaultValue = "${project.testCompileSourceRoots}", readonly = true, required = true )
     private List<String> compileSourceRoots;
-
-    /**
-     * Project test classpath.
-     */
-    @Parameter ( defaultValue = "${project.testClasspathElements}", required = true, readonly = true )
-    private List<String> classpathElements;
 
     /**
      * The directory where compiled test classes go.
@@ -147,6 +145,9 @@ public class TestCompilerMojo
     @Parameter ( defaultValue = "${project.build.directory}/generated-test-sources/test-annotations" )
     private File generatedTestSourcesDirectory;
 
+    private List<String> classpathElements;
+
+    private List<String> modulepathElements;
 
     public void execute()
         throws MojoExecutionException, CompilationFailureException
@@ -157,6 +158,15 @@ public class TestCompilerMojo
         }
         else
         {
+            try
+            {
+                preparePaths();
+            }
+            catch ( DependencyResolutionRequiredException e )
+            {
+                throw new MojoExecutionException( e.getMessage() );
+            }
+            
             super.execute();
         }
     }
@@ -170,10 +180,87 @@ public class TestCompilerMojo
     {
         return classpathElements;
     }
+    
+    @Override
+    protected List<String> getModulepathElements()
+    {
+        return modulepathElements;
+    }
 
     protected File getOutputDirectory()
     {
         return outputDirectory;
+    }
+
+    private void preparePaths()
+        throws DependencyResolutionRequiredException
+    {
+        File mainOutputDirectory = new File( getProject().getBuild().getOutputDirectory() );
+
+        File mainModuleInfo = new File( mainOutputDirectory, "module-info.class" );
+        
+        boolean hasMainModuleDescriptor = mainModuleInfo.exists();
+        
+        boolean hasTestModuleDescriptor = false;
+        for ( String sourceRoot : getProject().getTestCompileSourceRoots() )
+        {
+            hasTestModuleDescriptor |= new File( sourceRoot, "module-info.java" ).exists();
+        }
+        
+        List<String> compilePathElements = getProject().getCompileClasspathElements();
+        List<String> testPathElements = getProject().getTestClasspathElements();
+
+        List<String> testScopedElements = new ArrayList<String>( testPathElements );
+        testScopedElements.removeAll( compilePathElements );
+        
+        if ( hasTestModuleDescriptor )
+        {
+            modulepathElements = testPathElements;
+            classpathElements = Collections.emptyList();
+
+            if ( hasMainModuleDescriptor )
+            {
+                // maybe some extra analysis required
+            }
+            else
+            {
+                // very odd
+                // Means that main sources must be compiled with -modulesource and -Xmodule:<moduleName>
+                // However, this has a huge impact since you can't simply use it as a classpathEntry 
+                // due to extra folder in between
+                throw new UnsupportedOperationException( "Can't compile test sources "
+                    + "when main sources are missing a module descriptor" );
+            }
+        }
+        else
+        {
+            if ( hasMainModuleDescriptor )
+            {
+                modulepathElements = compilePathElements;
+                classpathElements = testScopedElements;
+                if ( compilerArgs == null )
+                {
+                    compilerArgs = new ArrayList<String>();
+                }
+                
+                try
+                {
+                    String moduleName = new AsmModuleInfoParser().getModuleName( mainOutputDirectory  );
+                    compilerArgs.add( "-Xmodule:" + moduleName );
+                    compilerArgs.add( "--add-modules" );
+                    compilerArgs.add( moduleName );
+                }
+                catch ( IOException e )
+                {
+                    throw new RuntimeException( "Failed to parse module-info: " + e.getMessage() );
+                }
+            }
+            else
+            {
+                modulepathElements = Collections.emptyList();
+                classpathElements = testPathElements;
+            }
+        }
     }
 
     protected SourceInclusionScanner getSourceInclusionScanner( int staleMillis )
